@@ -1,2 +1,3 @@
 DIST lttoolbox-3.3.0.tar.gz 433689 SHA256 b12cb16f286e87f15eea0e3e988c70e89183eaa6e46a517aff2a4260e52ed773 SHA512 c05e47657622f9c1c9237cf998d0cd0d13ee8736cf3be69c558a97e2503e07e46f2fcb9a8449198a1c5e20eabbae2ec100e0c9f810562819353aa003c00851a2 WHIRLPOOL a4dfaee9c75158d76c1f97dabf575ffcf970902a689609a4ff94e5586d632a65d9c10c341c76e1f4a992f40151f0fbbc6df411616c2165122fcce5291b3b5b19
 DIST lttoolbox-3.3.1.tar.gz 450529 SHA256 55eaa1159951d783bb5b42f32fb94727fa19303b7409b720a26a2c5260fbec36 SHA512 ddecabc545ccd7e7e14c4231558c4b8006aed2bfe6cdad38aaff1494546b06f05548640c32e0d3453bd49db8e5be51c7ce55aa979f4acb3d5ebd03d4461542d2 WHIRLPOOL dcfd05d51f34c36e21cf0512ed38863be83fb0fd9f7a78916a3a4b4ada4244989abadcec4709a7e0111cca55268aa84f1cf32559e1f66a7b60dccf6a407b857f
+DIST lttoolbox-3.3.2.tar.gz 438521 SHA256 4a3e254df0654d81dff3d8af4b0b86a99be6780da7a447e4ea8dd189e6121ec7 SHA512 f8be145433e3d6d8905b693c4f4091c8b7c09885d1788b9c8b1ec126331a4535d36b5e9b1f8b0f2981841385a7dc4543bfa1866cbde20c14c469a0233bcacf1d WHIRLPOOL 541601573081fb1502a4cf91a1824a842893bd63db344d89d4c49ac89b5b4cd1137ce0c2a57e4c528216aa8063e4ed6bc2c7b250edbb4683f2108fc125c8ef15
