@@ -1,6 +1,11 @@
 # ChangeLog for sci-misc/lttoolbox
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*lttoolbox-3.3.2 (05 Jan 2016)
+
+  05 Jan 2016; Flammie Pirinen <flammie@gentoo.org> +lttoolbox-3.3.2.ebuild:
+  sci-misc/lttoolbox: version bump.
 
 *lttoolbox-3.3.1 (03 Dec 2015)
 
